// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmountLabel > should render 1`] = `
<DocumentFragment>
  <div
    class="css-1v19423"
    color="success"
  >
    <div
      class="flex space-x-1 items-stretch"
    >
      <span
        class="whitespace-nowrap"
        data-testid="Amount"
      >
        + 10 ARK
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AmountLabel > should render compact 1`] = `
<DocumentFragment>
  <div
    class="css-1q2kz5x"
    color="success"
  >
    <div
      class="flex space-x-1 items-center"
    >
      <span
        class="whitespace-nowrap"
        data-testid="Amount"
      >
        + 10 ARK
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AmountLabel > should render negative 1`] = `
<DocumentFragment>
  <div
    class="css-148b4hi"
    color="danger"
  >
    <div
      class="flex space-x-1 items-stretch"
    >
      <span
        class="whitespace-nowrap"
        data-testid="Amount"
      >
        - 10 ARK
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AmountLabel > should render zero 1`] = `
<DocumentFragment>
  <div
    class="css-6qumvg"
    color="neutral"
  >
    <div
      class="flex space-x-1 items-stretch"
    >
      <span
        class="whitespace-nowrap"
        data-testid="Amount"
      >
        0 ARK
      </span>
    </div>
  </div>
</DocumentFragment>
`;
